<resources>
    <string name="app_name">MyThoughts</string>
    <string name="title">Enter Title</string>
    <string name="Thought">Enter Thought</string>
    <string name="add">Add Thought</string>
    <string name="show">Show Thought</string>
    <string name="mythoughts">MyThoughts</string>
    <string name="update">Update Thought</string>
    <string name="delete">Delete Thought</string>
</resources>