<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#393E46"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:fontFamily="@font/beth_ellen"
        android:textColor="#fd28fc"
        android:shadowColor="@color/black"
        android:gravity="center"
        android:text="@string/mythoughts"
        android:textSize="28sp"
        android:textStyle="italic" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:fontFamily="@font/beth_ellen"
        android:textColor="#2dfffe"
        android:shadowColor="@color/black"
        android:gravity="center"
        android:text="@string/mythoughts"
        android:textSize="28sp"
        android:textStyle="italic" />
    <TextView
        android:id="@+id/TVtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/beth_ellen"
        android:textColor="#E6FFFFFF"
        android:shadowColor="@color/black"
        android:gravity="center"
        android:text="@string/mythoughts"
        android:textSize="28sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/ETtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TVtitle"
        android:layout_marginHorizontal="5dp"
        android:autofillHints=""
        android:background="#222831"
        android:hint="@string/title"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingHorizontal="5dp"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="5dp"
        android:textColor="#E6FFFFFF"
        android:textColorHint="#CCFFFFFF" />

    <EditText
        android:id="@+id/ETthought"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ETtitle"
        android:layout_marginHorizontal="5dp"
        android:autofillHints=""
        android:background="#222831"
        android:hint="@string/Thought"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingHorizontal="5dp"
        android:paddingVertical="10dp"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:textColor="#E6FFFFFF"
        android:textColorHint="#CCFFFFFF" />

    <Button
        android:id="@+id/Btnadd"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_below="@id/ETthought"
        android:layout_marginTop="10dp"
        android:backgroundTint="#00ADB5"
        android:text="@string/add"
        android:textColor="#E6FFFFFF" />
    <Button
        android:id="@+id/Btnshow"
        android:layout_width="160dp"
        android:layout_height="55dp"
        android:text="@string/show"
        android:backgroundTint="#00ADB5"
        android:textColor="#E6FFFFFF"
        android:layout_below="@id/ETthought"
        android:layout_marginTop="10dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/TVrectitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Btnadd"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="50dp"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TVrecthought"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TVrectitle"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:textStyle="italic" />


</RelativeLayout>